--- a/index.html
+++ b/index.html
@@ -10,6 +10,23 @@
     </head>
 
     <body>
-      Test
+
+      <div class="container">
+
+        <div class="header">
+          header
+        </div>
+
+        <div class="left">
+          left
+          <div class="contact">contact</div>
+          <div class="education">education</div>
+          <div class="skills">skills</div>
+        </div>
+
+        <div class="right">right</div>
+        
+      </div>
+
     </body>
 </html>
