--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
       <div class="container">
 
         <div class="header">
-          header
+          <div class="name">Redmond Chan</div>
+          <div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit</div>
         </div>
 
         <div class="left">
@@ -25,7 +26,7 @@
         </div>
 
         <div class="right">right</div>
-        
+
       </div>
 
     </body>
