--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
       <div class="container">
 
         <div class="header">
-          <div class="name">Redmond Chan</div>
+          <div class="name">
+            Redmond Chan
+            <span class="title">Software Engineer</span>
+          </div>
           <div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit</div>
         </div>
 
