added description and css for font size and page size

--- a/index.html
+++ b/index.html
@@ -14,11 +14,15 @@
       <div class="container">
 
         <div class="header">
-          <div class="name">
+          <div class="name large-font">
             Redmond Chan
             <span class="title">Software Engineer</span>
           </div>
-          <div class="description">Lorem ipsum dolor sit amet, consectetur adipisicing elit</div>
+          <div class="description">
+            Front-end engineer who began a software engineering journey by satisfying a curiosity on how video games
+            work. On this quest, I added Ruby on Rails, JavaScript and React/Redux to my software programming skills. I am
+            seeking a front-end engineer role where I can contribute to projects that will have a positive impact.
+          </div>
         </div>
 
         <div class="left">
