added contact info

--- a/index.html
+++ b/index.html
@@ -27,7 +27,28 @@
 
         <div class="left">
           left
-          <div class="contact">contact</div>
+
+          <div class="contact">
+            Contact
+            <ul>
+              <li>
+                <span class="font-bold">Cell:</span> 917-239-9094
+              </li>
+              <li>
+                <span class="font-bold">Email:</span> <a class="font-white" href="mailto:redmondchan92@gmail.com">redmondchan92@gmail.com</a>
+              </li>
+              <li>
+                <span class="font-bold">Github:</span> <a class="font-white" href="https://github.com/redmondchan">redmondchan</a>
+              </li>
+              <li>
+                <span class="font-bold">Linkedin:</span> <a class="font-white" href="https://www.linkedin.com/in/redmondchan">redmondchan</a>
+              </li>
+              <li>
+                <span class="font-bold">Medium:</span> <a class="font-white" href="https://medium.com/@redmondchan92">redmondchan</a>
+              </li>
+            </ul>
+          </div>
+
           <div class="education">education</div>
           <div class="skills">skills</div>
         </div>
