--- a/index.html
+++ b/index.html
@@ -49,7 +49,13 @@
             </ul>
           </div>
 
-          <div class="education">education</div>
+          <div class="education">
+            Education
+            <h5>Flatiron School - 2019</h5>
+            <p>Full Stack Web Development, Ruby on Rails and JavaScript immersive program</p>
+            <h5>SUNY Farmingdale - 2014</h5>
+            <p>Bachelor of Science in Security Systems</p>
+          </div>
 
           <div class="skills">skills</div>
         </div>
