added skills info

--- a/index.html
+++ b/index.html
@@ -57,7 +57,19 @@
             <p>Bachelor of Science in Security Systems</p>
           </div>
 
-          <div class="skills">skills</div>
+          <div class="skills">
+            Skills
+            <ul>
+             <li>Flatiron School Immersive Program</li>
+             <li>Ruby, Ruby on Rails</li>
+             <li>JavaScript, React, React-Redux</li>
+             <li>Material-React, Semantic-React</li>
+             <li>HTML, CSS, Bootstrap, Sass/SCSS</li>
+             <li>SQL, PostgreSQL</li>
+             <li>CanvasJS, Particles.JS</li>
+           </ul>
+          </div>
+          
         </div>
 
         <div class="right">right</div>
