removed testing code

--- a/index.html
+++ b/index.html
@@ -26,7 +26,6 @@
         </div>
 
         <div class="left">
-          left
 
           <div class="contact">
             Contact
@@ -69,10 +68,10 @@
              <li>CanvasJS, Particles.JS</li>
            </ul>
           </div>
-          
+
         </div>
 
-        <div class="right">right</div>
+        <div class="right"></div>
 
       </div>
 
