added bottom border for section name

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <div class="left">
 
           <div class="contact">
-            Contact
+            <div class="section-name">Contact</div>
             <ul>
               <li>
                 <span>Cell:</span> 917-239-9094
