added classes for section names for bottom border

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           </div>
 
           <div class="education">
-            Education
+            <span class="section-name">Education</span>
             <h5>Flatiron School - 2019</h5>
             <p>Full Stack Web Development, Ruby on Rails and JavaScript immersive program</p>
             <h5>SUNY Farmingdale - 2014</h5>
@@ -57,7 +57,7 @@
           </div>
 
           <div class="skills">
-            Skills
+            <span class="section-name">Skills</span>
             <ul>
              <li>Flatiron School Immersive Program</li>
              <li>Ruby, Ruby on Rails</li>
