switched to dl list for education

--- a/index.html
+++ b/index.html
@@ -50,10 +50,12 @@
 
           <div class="education">
             <span class="section-name">Education</span>
-            <h5>Flatiron School - 2019</h5>
-            <p>Full Stack Web Development, Ruby on Rails and JavaScript immersive program</p>
-            <h5>SUNY Farmingdale - 2014</h5>
-            <p>Bachelor of Science in Security Systems</p>
+            <dl>
+              <dt>Flatiron School - 2019</dt>
+              <dd>Full Stack Web Development, Ruby on Rails and JavaScript immersive program</dd>
+              <dt>SUNY Farmingdale - 2014</dt>
+              <dd>Bachelor of Science in Security Systems</dd>
+            </dl>
           </div>
 
           <div class="skills">
