--- a/index.html
+++ b/index.html
@@ -75,123 +75,123 @@
 
         <div class="right">
           <section class="section">
-    <h2 class="font-orange">TECHNICAL PROJECTS</h2>
-    <ol class="ol">
+            <h2>TECHNICAL PROJECTS</h2>
+              <ol>
 
-     <!-- may use this project later keeping it here for reference -->
-      <!-- <li class="u-margin-bottom-small">
-        <header>
-          <p class="list-header">Cheesecake -
-           <span>
-             <a class="font-normal" href="https://github.com/redmondchan/cheesecake-css-sass">Github</a>
-             <span>|</span>
-             <a class="font-normal" href="https://youtu.be/LnXk8aXmvsc">Video Demo</a>
-             <span>|</span>
-             <a class="font-normal" href="https://cheesecake-css-sass.herokuapp.com">Site Demo</a>
-           </span>
-         </p>
-        </header>
-        <span class="font-italic">Static website about my dog, Cheesecake, to practice CSS/SCSS</span>
-        <ul class="ul font-small">
-          <li>- Implemented BEM naming conventions to increase the speed of development, debugging, and future implementations</li>
-          <li>- Followed the 7-1 pattern to create a maintainable, scalable and well-organized project</li>
-          <li>- Utilized Sass mixins to write media queries for responsive design</li>
-          <li>- Created custom buttons, radio buttons, popups, and effects with CSS</li>
-        </ul>
-      </li> -->
+                <!-- may use this project later keeping it here for reference -->
+                <!-- <li class="u-margin-bottom-small">
+                  <header>
+                    <p class="list-header">Cheesecake -
+                      <span>
+                        <a class="font-normal" href="https://github.com/redmondchan/cheesecake-css-sass">Github</a>
+                        <span>|</span>
+                        <a class="font-normal" href="https://youtu.be/LnXk8aXmvsc">Video Demo</a>
+                        <span>|</span>
+                        <a class="font-normal" href="https://cheesecake-css-sass.herokuapp.com">Site Demo</a>
+                      </span>
+                    </p>
+                  </header>
+                  <span class="font-italic">Static website about my dog, Cheesecake, to practice CSS/SCSS</span>
+                  <ul class="ul font-small">
+                    <li>- Implemented BEM naming conventions to increase the speed of development, debugging, and future implementations</li>
+                    <li>- Followed the 7-1 pattern to create a maintainable, scalable and well-organized project</li>
+                    <li>- Utilized Sass mixins to write media queries for responsive design</li>
+                    <li>- Created custom buttons, radio buttons, popups, and effects with CSS</li>
+                  </ul>
+                </li> -->
 
-      <li>
-        <header>
-          <p class="list-header">Adopt Pup -
-            <span>
-              <a class="font-normal" href="https://github.com/redmondchan/adopt_pup">Github</a>
-              <span>|</span>
-              <a class="font-normal" href="https://youtu.be/kD720FRCN10">Video Demo</a>
-            </span>
-          </p>
-        </header>
-        <span class="font-italic">Full RoR website for adopting dogs</span>
-        <ul class="ul font-small">
-          <li>- Configured ActiveRecord association with Postgres to store user data</li>
-          <li>- Implemented CRUD operations using MVC architecture of Rails</li>
-          <li>- Developed and styled view layer of MVC framework using Bootstrap</li>
-          <li>- Utilized Rails sessions for authentication</li>
-        </ul>
-      </li>
+                <li>
+                  <header>
+                    <p class="list-header">Adopt Pup -
+                      <span>
+                        <a class="font-normal" href="https://github.com/redmondchan/adopt_pup">Github</a>
+                        <span>|</span>
+                        <a class="font-normal" href="https://youtu.be/kD720FRCN10">Video Demo</a>
+                      </span>
+                    </p>
+                  </header>
+                  <span class="font-italic">Full RoR website for adopting dogs</span>
+                  <ul class="ul font-small">
+                    <li>- Configured ActiveRecord association with Postgres to store user data</li>
+                    <li>- Implemented CRUD operations using MVC architecture of Rails</li>
+                    <li>- Developed and styled view layer of MVC framework using Bootstrap</li>
+                    <li>- Utilized Rails sessions for authentication</li>
+                  </ul>
+                </li>
 
-      <li class="u-margin-bottom-small">
-        <header>
-          <p class="list-header">BabyGotchi - <span class="font-normal">Github:</span>
-            <span>
-              <a class="font-normal" href="https://github.com/redmondchan/prepare-baby-frontend">Front-End</a>
-              <a class="font-normal" href="https://github.com/redmondchan/prepare-baby-backend">Back-End</a>
-              <span>|</span>
-              <a class="font-normal" href="https://youtu.be/WoTFtouYni8">Video Demo</a>
-              <span>|</span>
-              <a class="font-normal" href="http://babygotchi.herokuapp.com/">Site Demo</a>
-            </span>
-          </p>
-        </header>
-        <span class="font-italic">A basic baby simulator</span>
-        <ul class="ul font-small">
-          <li>- Utilized JSON Web Tokens and localStorage to store encrypted user information client-side</li>
-          <li>- Implemented user interface employing React and Redux with Semantic-React for styling</li>
-          <li>- Developed a RESTful Rails API backend with endpoints for users, babies and logs</li>
-          <li>- Exploited NYC OpenData API to randomly generate a name for the baby</li>
-        </ul>
-      </li>
+                <li class="u-margin-bottom-small">
+                  <header>
+                    <p class="list-header">BabyGotchi - <span class="font-normal">Github:</span>
+                      <span>
+                        <a class="font-normal" href="https://github.com/redmondchan/prepare-baby-frontend">Front-End</a>
+                        <a class="font-normal" href="https://github.com/redmondchan/prepare-baby-backend">Back-End</a>
+                        <span>|</span>
+                        <a class="font-normal" href="https://youtu.be/WoTFtouYni8">Video Demo</a>
+                        <span>|</span>
+                        <a class="font-normal" href="http://babygotchi.herokuapp.com/">Site Demo</a>
+                      </span>
+                    </p>
+                  </header>
+                  <span class="font-italic">A basic baby simulator</span>
+                  <ul class="ul font-small">
+                    <li>- Utilized JSON Web Tokens and localStorage to store encrypted user information client-side</li>
+                    <li>- Implemented user interface employing React and Redux with Semantic-React for styling</li>
+                    <li>- Developed a RESTful Rails API backend with endpoints for users, babies and logs</li>
+                    <li>- Exploited NYC OpenData API to randomly generate a name for the baby</li>
+                  </ul>
+                </li>
 
-      <li class="u-margin-bottom-small">
-        <header>
-          <p class="list-header">Genome Mutation Identifier - <span>
-           <a class="font-normal" href="https://github.com/redmondchan/Genome-Mutation-Identifier">Github</a>
-           <span>|</span>
-           <a class="font-normal" href="https://youtu.be/10FqPGk2WW0">Video Demo</a>
-         </span></p>
-        </header>
-        <span class="font-italic">Hackathon project designed for researchers to find known mutations and to identify deletion or insertion mutations</span>
-        <ul class="ul font-small">
-          <li>- Implemented user interface employing React with Material-React for styling</li>
-          <li>- Developed algorithms to identify deletion or insertion mutations in DNA</li>
-          <li>- Collaborated with a 5 person team at a hackathon to build a React App</li>
-          <li>- Utilized Papa Parse to convert CSV uploads into JSON</li>
-        </ul>
-      </li>
+                <li class="u-margin-bottom-small">
+                  <header>
+                    <p class="list-header">Genome Mutation Identifier - <span>
+                     <a class="font-normal" href="https://github.com/redmondchan/Genome-Mutation-Identifier">Github</a>
+                     <span>|</span>
+                     <a class="font-normal" href="https://youtu.be/10FqPGk2WW0">Video Demo</a>
+                   </span></p>
+                  </header>
+                  <span class="font-italic">Hackathon project designed for researchers to find known mutations and to identify deletion or insertion mutations</span>
+                  <ul class="ul font-small">
+                    <li>- Implemented user interface employing React with Material-React for styling</li>
+                    <li>- Developed algorithms to identify deletion or insertion mutations in DNA</li>
+                    <li>- Collaborated with a 5 person team at a hackathon to build a React App</li>
+                    <li>- Utilized Papa Parse to convert CSV uploads into JSON</li>
+                  </ul>
+                </li>
 
-    </ol>
-  </section>
+              </ol>
+            </section>
 
-  <section class="section">
-    <h2 class="font-orange">WORK HISTORY</h2>
-    <ol class="ol">
+            <section class="section">
+              <h2 class="font-orange">WORK HISTORY</h2>
+              <ol class="ol">
 
-      <li class="u-margin-bottom-small">
-        <header>
-          <p class="list-header">United Federation of Teachers, Brooklyn, NY</p>
-        </header>
-        <span class="font-italic">Receptionist, April 2015- February 2018</span>
-        <ul class="ul font-small">
-          <li>- Assisted with the implementation of new security protocol</li>
-          <li>- Improved customer service for approximately 100 visitors daily by reorganizing previous filing system</li>
-          <li>- Trained three new receptionist to efficiently assess the key issues of visitors</li>
-        </ul>
-      </li>
+                <li class="u-margin-bottom-small">
+                  <header>
+                    <p class="list-header">United Federation of Teachers, Brooklyn, NY</p>
+                  </header>
+                  <span class="font-italic">Receptionist, April 2015- February 2018</span>
+                  <ul class="ul font-small">
+                    <li>- Assisted with the implementation of new security protocol</li>
+                    <li>- Improved customer service for approximately 100 visitors daily by reorganizing previous filing system</li>
+                    <li>- Trained three new receptionist to efficiently assess the key issues of visitors</li>
+                  </ul>
+                </li>
 
-      <li>
-        <header>
-          <p class="list-header">Baxter Street Day Care, New York, NY</p>
-        </header>
-        <span class="font-italic">Teacher Assistant, July 2013 - March 2015</span>
-        <ul class="ul font-small">
-          <li>- Designed and built carnival games for the annual summer Bazaar to raise funds for the student trip</li>
-          <li>- Coordinated and executed a play with the students for the annual summer performance</li>
-          <li>- Constructed and administered lesson plans for twenty 4th grade students</li>
-        </ul>
-      </li>
+                <li>
+                  <header>
+                    <p class="list-header">Baxter Street Day Care, New York, NY</p>
+                  </header>
+                  <span class="font-italic">Teacher Assistant, July 2013 - March 2015</span>
+                  <ul class="ul font-small">
+                    <  li>- Designed and built carnival games for</th>e annual summer Bazaar to raise funds fo  r the student trip</li>
+                    <li>-   Coordinated and executed a play with <the></the> students for the annual summer performa  nce</li>
+                    <li>- Constructed <and></and> administered lesson plans for twenty 4t  h grade students</li>
+                  </ul>
+                  </li>
 
-    </ol>
-  </section>
-        </div>
+              </ol>
+            </section>
+          </div>
 
       </div>
 
