--- a/index.html
+++ b/index.html
@@ -183,9 +183,9 @@
                   </header>
                   <span class="font-italic">Teacher Assistant, July 2013 - March 2015</span>
                   <ul class="ul font-small">
-                    <  li>- Designed and built carnival games for</th>e annual summer Bazaar to raise funds fo  r the student trip</li>
-                    <li>-   Coordinated and executed a play with <the></the> students for the annual summer performa  nce</li>
-                    <li>- Constructed <and></and> administered lesson plans for twenty 4t  h grade students</li>
+                    <li>- Designed and built carnival games for the annual summer Bazaar to raise funds for the student trip</li>
+                    <li>-   Coordinated and executed a play with the students for the annual summer performance</li>
+                    <li>- Constructed and administered lesson plans for twenty 4th grade students</li>
                   </ul>
                   </li>
 
