--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </div>
 
         <div class="right">
-          <section class="section">
+          <section>
             <h2>TECHNICAL PROJECTS</h2>
               <ol>
 
@@ -102,16 +102,16 @@
 
                 <li>
                   <header>
-                    <p class="list-header">Adopt Pup -
+                    <p>Adopt Pup -
                       <span>
-                        <a class="font-normal" href="https://github.com/redmondchan/adopt_pup">Github</a>
+                        <a href="https://github.com/redmondchan/adopt_pup">Github</a>
                         <span>|</span>
-                        <a class="font-normal" href="https://youtu.be/kD720FRCN10">Video Demo</a>
+                        <a href="https://youtu.be/kD720FRCN10">Video Demo</a>
                       </span>
                     </p>
                   </header>
-                  <span class="font-italic">Full RoR website for adopting dogs</span>
-                  <ul class="ul font-small">
+                  <span>Full RoR website for adopting dogs</span>
+                  <ul>
                     <li>- Configured ActiveRecord association with Postgres to store user data</li>
                     <li>- Implemented CRUD operations using MVC architecture of Rails</li>
                     <li>- Developed and styled view layer of MVC framework using Bootstrap</li>
@@ -119,21 +119,21 @@
                   </ul>
                 </li>
 
-                <li class="u-margin-bottom-small">
+                <li>
                   <header>
-                    <p class="list-header">BabyGotchi - <span class="font-normal">Github:</span>
+                    <p>BabyGotchi - <span>Github:</span>
                       <span>
-                        <a class="font-normal" href="https://github.com/redmondchan/prepare-baby-frontend">Front-End</a>
-                        <a class="font-normal" href="https://github.com/redmondchan/prepare-baby-backend">Back-End</a>
+                        <a href="https://github.com/redmondchan/prepare-baby-frontend">Front-End</a>
+                        <a href="https://github.com/redmondchan/prepare-baby-backend">Back-End</a>
                         <span>|</span>
-                        <a class="font-normal" href="https://youtu.be/WoTFtouYni8">Video Demo</a>
+                        <a href="https://youtu.be/WoTFtouYni8">Video Demo</a>
                         <span>|</span>
-                        <a class="font-normal" href="http://babygotchi.herokuapp.com/">Site Demo</a>
+                        <a href="http://babygotchi.herokuapp.com/">Site Demo</a>
                       </span>
                     </p>
                   </header>
-                  <span class="font-italic">A basic baby simulator</span>
-                  <ul class="ul font-small">
+                  <span>A basic baby simulator</span>
+                  <ul>
                     <li>- Utilized JSON Web Tokens and localStorage to store encrypted user information client-side</li>
                     <li>- Implemented user interface employing React and Redux with Semantic-React for styling</li>
                     <li>- Developed a RESTful Rails API backend with endpoints for users, babies and logs</li>
@@ -141,16 +141,18 @@
                   </ul>
                 </li>
 
-                <li class="u-margin-bottom-small">
+                <li>
                   <header>
-                    <p class="list-header">Genome Mutation Identifier - <span>
-                     <a class="font-normal" href="https://github.com/redmondchan/Genome-Mutation-Identifier">Github</a>
-                     <span>|</span>
-                     <a class="font-normal" href="https://youtu.be/10FqPGk2WW0">Video Demo</a>
-                   </span></p>
+                    <p>Genome Mutation Identifier -
+                      <span>
+                       <a href="https://github.com/redmondchan/Genome-Mutation-Identifier">Github</a>
+                       <span>|</span>
+                       <a href="https://youtu.be/10FqPGk2WW0">Video Demo</a>
+                     </span>
+                    </p>
                   </header>
-                  <span class="font-italic">Hackathon project designed for researchers to find known mutations and to identify deletion or insertion mutations</span>
-                  <ul class="ul font-small">
+                  <span>Hackathon project designed for researchers to find known mutations and to identify deletion or insertion mutations</span>
+                  <ul>
                     <li>- Implemented user interface employing React with Material-React for styling</li>
                     <li>- Developed algorithms to identify deletion or insertion mutations in DNA</li>
                     <li>- Collaborated with a 5 person team at a hackathon to build a React App</li>
@@ -162,15 +164,15 @@
             </section>
 
             <section class="section">
-              <h2 class="font-orange">WORK HISTORY</h2>
-              <ol class="ol">
+              <h2>WORK HISTORY</h2>
+              <ol>
 
-                <li class="u-margin-bottom-small">
+                <li>
                   <header>
-                    <p class="list-header">United Federation of Teachers, Brooklyn, NY</p>
+                    <p>United Federation of Teachers, Brooklyn, NY</p>
                   </header>
-                  <span class="font-italic">Receptionist, April 2015- February 2018</span>
-                  <ul class="ul font-small">
+                  <span>Receptionist, April 2015- February 2018</span>
+                  <ul>
                     <li>- Assisted with the implementation of new security protocol</li>
                     <li>- Improved customer service for approximately 100 visitors daily by reorganizing previous filing system</li>
                     <li>- Trained three new receptionist to efficiently assess the key issues of visitors</li>
@@ -179,10 +181,10 @@
 
                 <li>
                   <header>
-                    <p class="list-header">Baxter Street Day Care, New York, NY</p>
+                    <p>Baxter Street Day Care, New York, NY</p>
                   </header>
-                  <span class="font-italic">Teacher Assistant, July 2013 - March 2015</span>
-                  <ul class="ul font-small">
+                  <span>Teacher Assistant, July 2013 - March 2015</span>
+                  <ul>
                     <li>- Designed and built carnival games for the annual summer Bazaar to raise funds for the student trip</li>
                     <li>-   Coordinated and executed a play with the students for the annual summer performance</li>
                     <li>- Constructed and administered lesson plans for twenty 4th grade students</li>
