switched to description list

--- a/index.html
+++ b/index.html
@@ -75,8 +75,8 @@
 
         <div class="right">
           <section>
-            <h2>TECHNICAL PROJECTS</h2>
-              <ol>
+            <span class="section-name">TECHNICAL PROJECTS</span>
+              <dl>
 
                 <!-- may use this project later keeping it here for reference -->
                 <!-- <li class="u-margin-bottom-small">
@@ -100,71 +100,52 @@
                   </ul>
                 </li> -->
 
-                <li>
-                  <header>
-                    <p>Adopt Pup -
-                      <span>
-                        <a href="https://github.com/redmondchan/adopt_pup">Github</a>
-                        <span>|</span>
-                        <a href="https://youtu.be/kD720FRCN10">Video Demo</a>
-                      </span>
-                    </p>
-                  </header>
-                  <span>Full RoR website for adopting dogs</span>
-                  <ul>
-                    <li>- Configured ActiveRecord association with Postgres to store user data</li>
-                    <li>- Implemented CRUD operations using MVC architecture of Rails</li>
-                    <li>- Developed and styled view layer of MVC framework using Bootstrap</li>
-                    <li>- Utilized Rails sessions for authentication</li>
-                  </ul>
-                </li>
+                <dt>Adopt Pup -
+                  <span>
+                    <a href="https://github.com/redmondchan/adopt_pup">Github</a>
+                    <span>|</span>
+                    <a href="https://youtu.be/kD720FRCN10">Video Demo</a>
+                  </span>
+                </dt>
+                  <dd>Full RoR website for adopting dogs</dd>
+                  <dd>- Configured ActiveRecord association with Postgres to store user data</dd>
+                  <dd>- Implemented CRUD operations using MVC architecture of Rails</dd>
+                  <dd>- Developed and styled view layer of MVC framework using Bootstrap</dd>
+                  <dd>- Utilized Rails sessions for authentication</dd>
 
-                <li>
-                  <header>
-                    <p>BabyGotchi - <span>Github:</span>
-                      <span>
-                        <a href="https://github.com/redmondchan/prepare-baby-frontend">Front-End</a>
-                        <a href="https://github.com/redmondchan/prepare-baby-backend">Back-End</a>
-                        <span>|</span>
-                        <a href="https://youtu.be/WoTFtouYni8">Video Demo</a>
-                        <span>|</span>
-                        <a href="http://babygotchi.herokuapp.com/">Site Demo</a>
-                      </span>
-                    </p>
-                  </header>
-                  <span>A basic baby simulator</span>
-                  <ul>
-                    <li>- Utilized JSON Web Tokens and localStorage to store encrypted user information client-side</li>
-                    <li>- Implemented user interface employing React and Redux with Semantic-React for styling</li>
-                    <li>- Developed a RESTful Rails API backend with endpoints for users, babies and logs</li>
-                    <li>- Exploited NYC OpenData API to randomly generate a name for the baby</li>
-                  </ul>
-                </li>
+                <dt>BabyGotchi - <span>Github:</span>
+                  <span>
+                    <a href="https://github.com/redmondchan/prepare-baby-frontend">Front-End</a>
+                    <a href="https://github.com/redmondchan/prepare-baby-backend">Back-End</a>
+                    <span>|</span>
+                    <a href="https://youtu.be/WoTFtouYni8">Video Demo</a>
+                    <span>|</span>
+                    <a href="http://babygotchi.herokuapp.com/">Site Demo</a>
+                  </span>
+                </dt>
+                  <dd>A basic baby simulator</dd>
+                  <dd>- Utilized JSON Web Tokens and localStorage to store encrypted user information client-side</dd>
+                  <dd>- Implemented user interface employing React and Redux with Semantic-React for styling</dd>
+                  <dd>- Developed a RESTful Rails API backend with endpoints for users, babies and logs</dd>
+                  <dd>- Exploited NYC OpenData API to randomly generate a name for the baby</dd>
 
-                <li>
-                  <header>
-                    <p>Genome Mutation Identifier -
-                      <span>
-                       <a href="https://github.com/redmondchan/Genome-Mutation-Identifier">Github</a>
-                       <span>|</span>
-                       <a href="https://youtu.be/10FqPGk2WW0">Video Demo</a>
-                     </span>
-                    </p>
-                  </header>
-                  <span>Hackathon project designed for researchers to find known mutations and to identify deletion or insertion mutations</span>
-                  <ul>
-                    <li>- Implemented user interface employing React with Material-React for styling</li>
-                    <li>- Developed algorithms to identify deletion or insertion mutations in DNA</li>
-                    <li>- Collaborated with a 5 person team at a hackathon to build a React App</li>
-                    <li>- Utilized Papa Parse to convert CSV uploads into JSON</li>
-                  </ul>
-                </li>
-
-              </ol>
+                <dt>Genome Mutation Identifier -
+                  <span>
+                    <a href="https://github.com/redmondchan/Genome-Mutation-Identifier">Github</a>
+                    <span>|</span>
+                    <a href="https://youtu.be/10FqPGk2WW0">Video Demo</a>
+                  </span>
+                </dt>
+                  <dd>Hackathon project designed for researchers to find known mutations and to identify deletion or insertion mutations</dd>
+                  <dd>- Implemented user interface employing React with Material-React for styling</dd>
+                  <dd>- Developed algorithms to identify deletion or insertion mutations in DNA</dd>
+                  <dd>- Collaborated with a 5 person team at a hackathon to build a React App</dd>
+                  <dd>- Utilized Papa Parse to convert CSV uploads into JSON</dd>
+              </dl>
             </section>
 
             <section class="section">
-              <h2>WORK HISTORY</h2>
+              <span class="section-name">Work History</span>
               <ol>
 
                 <li>
