removed unused class

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
               </dl>
             </section>
 
-            <section class="section">
+            <section>
               <span class="section-name">Work History</span>
               <ol>
 
