--- a/index.html
+++ b/index.html
@@ -146,33 +146,21 @@
 
             <section>
               <span class="section-name">Work History</span>
-              <ol>
+              <dl>
 
-                <li>
-                  <header>
-                    <p>United Federation of Teachers, Brooklyn, NY</p>
-                  </header>
+                <dt>United Federation of Teachers, Brooklyn, NY</dt>
                   <span>Receptionist, April 2015- February 2018</span>
-                  <ul>
-                    <li>- Assisted with the implementation of new security protocol</li>
-                    <li>- Improved customer service for approximately 100 visitors daily by reorganizing previous filing system</li>
-                    <li>- Trained three new receptionist to efficiently assess the key issues of visitors</li>
-                  </ul>
-                </li>
+                    <dd>- Assisted with the implementation of new security protocol</dd>
+                    <dd>- Improved customer service for approximately 100 visitors daily by reorganizing previous filing system</dd>
+                    <dd>- Trained three new receptionist to efficiently assess the key issues of visitors</dd>
 
-                <li>
-                  <header>
-                    <p>Baxter Street Day Care, New York, NY</p>
-                  </header>
-                  <span>Teacher Assistant, July 2013 - March 2015</span>
-                  <ul>
-                    <li>- Designed and built carnival games for the annual summer Bazaar to raise funds for the student trip</li>
-                    <li>-   Coordinated and executed a play with the students for the annual summer performance</li>
-                    <li>- Constructed and administered lesson plans for twenty 4th grade students</li>
-                  </ul>
-                  </li>
+                <dt>Baxter Street Day Care, New York, NY</dt>
+                  <dd>Teacher Assistant, July 2013 - March 2015</dd>
+                  <dd>- Designed and built carnival games for the annual summer Bazaar to raise funds for the student trip</dd>
+                  <dd>-   Coordinated and executed a play with the students for the annual summer performance</dd>
+                  <dd>- Constructed and administered lesson plans for twenty 4th grade students</dd>
 
-              </ol>
+              </dl>
             </section>
           </div>
 
