fixed all caps for technical projects and changed to individual dl for each one

--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
 
         <div class="right">
           <section>
-            <span class="section-name">TECHNICAL PROJECTS</span>
-              <dl>
+            <span class="section-name">Technical Projects</span>
 
                 <!-- may use this project later keeping it here for reference -->
                 <!-- <li class="u-margin-bottom-small">
@@ -100,6 +99,7 @@
                   </ul>
                 </li> -->
 
+              <dl>
                 <dt>Adopt Pup -
                   <span>
                     <a href="https://github.com/redmondchan/adopt_pup">Github</a>
@@ -112,7 +112,9 @@
                   <dd>- Implemented CRUD operations using MVC architecture of Rails</dd>
                   <dd>- Developed and styled view layer of MVC framework using Bootstrap</dd>
                   <dd>- Utilized Rails sessions for authentication</dd>
+              </dl>
 
+              <dl>
                 <dt>BabyGotchi - <span>Github:</span>
                   <span>
                     <a href="https://github.com/redmondchan/prepare-baby-frontend">Front-End</a>
@@ -128,7 +130,9 @@
                   <dd>- Implemented user interface employing React and Redux with Semantic-React for styling</dd>
                   <dd>- Developed a RESTful Rails API backend with endpoints for users, babies and logs</dd>
                   <dd>- Exploited NYC OpenData API to randomly generate a name for the baby</dd>
+              </dl>
 
+              <dl>
                 <dt>Genome Mutation Identifier -
                   <span>
                     <a href="https://github.com/redmondchan/Genome-Mutation-Identifier">Github</a>
@@ -146,13 +150,15 @@
 
             <section>
               <span class="section-name">Work History</span>
-              <dl>
+              <dl class="test">
 
                 <dt>United Federation of Teachers, Brooklyn, NY</dt>
                   <span>Receptionist, April 2015- February 2018</span>
                     <dd>- Assisted with the implementation of new security protocol</dd>
                     <dd>- Improved customer service for approximately 100 visitors daily by reorganizing previous filing system</dd>
                     <dd>- Trained three new receptionist to efficiently assess the key issues of visitors</dd>
+                    </dl>
+                    <dl class="test">
 
                 <dt>Baxter Street Day Care, New York, NY</dt>
                   <dd>Teacher Assistant, July 2013 - March 2015</dd>
