added bold and italic styling, fixed right border, changed project descriptions

--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
             <span class="section-name">Education</span>
             <dl>
               <dt>Flatiron School - 2019</dt>
-              <dd>Full Stack Web Development, Ruby on Rails and JavaScript immersive program</dd>
+              <dd class="italic">Full Stack Web Development, Ruby on Rails and JavaScript immersive program</dd>
               <dt>SUNY Farmingdale - 2014</dt>
-              <dd>Bachelor of Science in Security Systems</dd>
+              <dd class="italic">Bachelor of Science in Security Systems</dd>
             </dl>
           </div>
 
@@ -101,13 +101,13 @@
 
               <dl>
                 <dt>Adopt Pup -
-                  <span>
+                  <span class="normal">
                     <a href="https://github.com/redmondchan/adopt_pup">Github</a>
                     <span>|</span>
                     <a href="https://youtu.be/kD720FRCN10">Video Demo</a>
                   </span>
                 </dt>
-                  <dd>Full RoR website for adopting dogs</dd>
+                  <dd class="italic">Full RoR website for adopting dogs</dd>
                   <dd>- Configured ActiveRecord association with Postgres to store user data</dd>
                   <dd>- Implemented CRUD operations using MVC architecture of Rails</dd>
                   <dd>- Developed and styled view layer of MVC framework using Bootstrap</dd>
@@ -115,8 +115,7 @@
               </dl>
 
               <dl>
-                <dt>BabyGotchi - <span>Github:</span>
-                  <span>
+                <dt>BabyGotchi - <span class="normal">Github:
                     <a href="https://github.com/redmondchan/prepare-baby-frontend">Front-End</a>
                     <a href="https://github.com/redmondchan/prepare-baby-backend">Back-End</a>
                     <span>|</span>
@@ -125,7 +124,7 @@
                     <a href="http://babygotchi.herokuapp.com/">Site Demo</a>
                   </span>
                 </dt>
-                  <dd>A basic baby simulator</dd>
+                  <dd class="italic">A basic baby simulator</dd>
                   <dd>- Utilized JSON Web Tokens and localStorage to store encrypted user information client-side</dd>
                   <dd>- Implemented user interface employing React and Redux with Semantic-React for styling</dd>
                   <dd>- Developed a RESTful Rails API backend with endpoints for users, babies and logs</dd>
@@ -134,17 +133,17 @@
 
               <dl>
                 <dt>Genome Mutation Identifier -
-                  <span>
+                  <span class="normal">
                     <a href="https://github.com/redmondchan/Genome-Mutation-Identifier">Github</a>
                     <span>|</span>
                     <a href="https://youtu.be/10FqPGk2WW0">Video Demo</a>
                   </span>
                 </dt>
-                  <dd>Hackathon project designed for researchers to find known mutations and to identify deletion or insertion mutations</dd>
-                  <dd>- Implemented user interface employing React with Material-React for styling</dd>
-                  <dd>- Developed algorithms to identify deletion or insertion mutations in DNA</dd>
-                  <dd>- Collaborated with a 5 person team at a hackathon to build a React App</dd>
+                  <dd class="italic">Hackathon project designed for researchers to find DNA mutations</dd>
+                  <dd>- Implemented user interface employing React with Material for styling</dd>
+                  <dd>- Developed algorithms to identify deletion or insertion mutations</dd>
                   <dd>- Utilized Papa Parse to convert CSV uploads into JSON</dd>
+                  <dd>- Collaborated with a 5 person team at a hackathon</dd>
               </dl>
             </section>
 
@@ -153,24 +152,27 @@
               <dl class="test">
 
                 <dt>United Federation of Teachers, Brooklyn, NY</dt>
-                  <span>Receptionist, April 2015- February 2018</span>
+                  <span class="italic">Receptionist, April 2015- February 2018</span>
                     <dd>- Assisted with the implementation of new security protocol</dd>
                     <dd>- Improved customer service for approximately 100 visitors daily by reorganizing previous filing system</dd>
                     <dd>- Trained three new receptionist to efficiently assess the key issues of visitors</dd>
                     </dl>
                     <dl class="test">
 
-                <dt>Baxter Street Day Care, New York, NY</dt>
-                  <dd>Teacher Assistant, July 2013 - March 2015</dd>
+                <!-- <dt>Baxter Street Day Care, New York, NY</dt>
+                  <dd class="italic">Teacher Assistant, July 2013 - March 2015</dd>
                   <dd>- Designed and built carnival games for the annual summer Bazaar to raise funds for the student trip</dd>
                   <dd>-   Coordinated and executed a play with the students for the annual summer performance</dd>
                   <dd>- Constructed and administered lesson plans for twenty 4th grade students</dd>
 
-              </dl>
+              </dl> -->
             </section>
           </div>
 
       </div>
 
     </body>
+    <footer class="footer">
+
+    </footer>
 </html>
