--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="header">
           <div class="name large-font">
             Redmond Chan
-            <span class="title">Software Engineer</span>
+            <span class="title italic">Software Engineer</span>
           </div>
           <div class="description">
             Front-end engineer who began a software engineering journey by satisfying a curiosity on how video games
