added font family, changed to darker green, changed to 12 font

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+
+        <link href="https://fonts.googleapis.com/css?family=EB+Garamond&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="style.css">
 
         <title>Redmond Chan Resume</title>
@@ -157,13 +159,14 @@
                     <dd>- Trained three new receptionist to efficiently assess the key issues of visitors</dd>
               </dl>
 
-                <!-- <dt>Baxter Street Day Care, New York, NY</dt>
+              <dl>
+                <dt>Baxter Street Day Care, New York, NY</dt>
                   <dd class="italic">Teacher Assistant, July 2013 - March 2015</dd>
                   <dd>- Designed and built carnival games for the annual summer Bazaar to raise funds for the student trip</dd>
                   <dd>-   Coordinated and executed a play with the students for the annual summer performance</dd>
                   <dd>- Constructed and administered lesson plans for twenty 4th grade students</dd>
-
-              </dl> -->
+              </dl>
+              
             </section>
           </div>
 
