added resume for different title and updated readme

--- a/junior-front-end-dev.html
+++ b/junior-front-end-dev.html
@@ -18,11 +18,11 @@
         <div class="header">
           <div class="name large-font">
             Redmond Chan
-            <span class="title italic">Software Engineer</span>
+            <span class="title italic">Junior Front End Engineer</span>
           </div>
           <div class="description">
-            Software engineer who began a software engineering journey by satisfying a curiosity on how video games
-            work. I am seeking a software engineer role where I can contribute to projects that will have a positive impact.
+            Front end developer who began his journey by satisfying a curiosity on how video games
+            work. I am seeking a front end developer role where I can contribute to projects that will have a positive impact.
           </div>
         </div>
 
@@ -79,26 +79,22 @@
             <span class="section-name">Technical Projects</span>
 
                 <!-- may use this project later keeping it here for reference -->
-                <!-- <li class="u-margin-bottom-small">
-                  <header>
-                    <p class="list-header">Cheesecake -
-                      <span>
-                        <a class="font-normal" href="https://github.com/redmondchan/cheesecake-css-sass">Github</a>
-                        <span>|</span>
-                        <a class="font-normal" href="https://youtu.be/LnXk8aXmvsc">Video Demo</a>
-                        <span>|</span>
-                        <a class="font-normal" href="https://cheesecake-css-sass.herokuapp.com">Site Demo</a>
-                      </span>
-                    </p>
-                  </header>
-                  <span class="font-italic">Static website about my dog, Cheesecake, to practice CSS/SCSS</span>
-                  <ul class="ul font-small">
-                    <li>- Implemented BEM naming conventions to increase the speed of development, debugging, and future implementations</li>
-                    <li>- Followed the 7-1 pattern to create a maintainable, scalable and well-organized project</li>
-                    <li>- Utilized Sass mixins to write media queries for responsive design</li>
-                    <li>- Created custom buttons, radio buttons, popups, and effects with CSS</li>
-                  </ul>
-                </li> -->
+             <dl>
+                <dt>Cheesecake -
+                  <span>
+                  <a href="https://github.com/redmondchan/cheesecake-css-sass">Github</a>
+                  <span>|</span>
+                  <a href="https://youtu.be/LnXk8aXmvsc">Video Demo</a>
+                  <span>|</span>
+                  <a href="https://cheesecake-css-sass.herokuapp.com">Site Demo</a>
+                  </span>
+                </dt>
+                <dd class="italic">Static website about my dog, Cheesecake, to practice CSS/SCSS</dd>
+                <dd>- Implemented BEM naming conventions to increase the speed of development, debugging, and future implementations</dd>
+                <dd>- Followed the 7-1 pattern to create a maintainable, scalable and well-organized project</dd>
+                <dd>- Utilized Sass mixins to write media queries for responsive design</dd>
+                <dd>- Created custom buttons, radio buttons, popups, and effects with CSS</dd>
+              </dl>
 
 
               <dl>
@@ -133,7 +129,7 @@
                   <dd>- Collaborated with a 5 person team at a hackathon</dd>
               </dl>
 
-              <dl>
+              <!-- <dl>
                 <dt>Adopt Pup -
                   <span class="normal">
                     <a href="https://github.com/redmondchan/adopt_pup">Github</a>
@@ -147,7 +143,7 @@
                 <dd>- Developed and styled view layer of MVC framework using Bootstrap</dd>
                 <dd>- Utilized Rails sessions for authentication</dd>
               </dl>
-            </section>
+            </section> -->
 
             <section>
               <span class="section-name">Work History</span>
