added junior software developer version

--- a/front-end-dev.html
+++ b/front-end-dev.html
@@ -18,7 +18,7 @@
         <div class="header">
           <div class="name large-font">
             Redmond Chan
-            <span class="title italic">Junior Front End Developer</span>
+            <span class="title italic">Front End Developer</span>
           </div>
           <div class="description">
             Front end developer who began his journey by satisfying a curiosity on how video games
