--- a/junior-soft-dev.html
+++ b/junior-soft-dev.html
@@ -18,11 +18,11 @@
         <div class="header">
           <div class="name large-font">
             Redmond Chan
-            <span class="title italic">Junior Front End Developer</span>
+            <span class="title italic">Junior Software Developer</span>
           </div>
           <div class="description">
-            Front end developer who began his journey by satisfying a curiosity on how video games
-            work. I am seeking a front end developer role where I can contribute to projects that will have a positive impact.
+            Software developer who began his journey by satisfying a curiosity on how video games
+            work. I am seeking a software developer role where I can contribute to projects that will have a positive impact.
           </div>
         </div>
 
